app/kuber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-my-app
  template:
    metadata:
      labels:
        app: hello-my-app
    spec:
      containers:
      - name: myapp
        image: vpankrashkin/myapp:v1
        ports:
        - name: web
          containerPort: 8080
        readinessProbe :
          httpGet :
            port : 8080
            path : /health
          initialDelaySeconds: 10
          periodSeconds: 5
