app/kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-my-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: web
  type: NodePort
