app/kuber/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/vpankrashkin($|/)(.*)
        backend:
          serviceName: hello-service
          servicePort: 8000
